Fixed shifting content on page load
Fixed shifting content when going from page to page in docs.

--- a/public/resources/css/module/_main-nav.scss
+++ b/public/resources/css/module/_main-nav.scss
@@ -34,8 +34,8 @@
       width: 135px;
       overflow: hidden;
       text-indent: -3000px;
-      margin-top: 0;
-      margin-bottom: 0;
+      margin:0;
+      padding: 0;
 
       @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
         background: url('/resources/images/logos/standard/logo-nav@2x.png') 0px 8px no-repeat;
@@ -111,7 +111,9 @@
     background: none;
     border-radius: 0;
     position: relative;
+    letter-spacing: 0.16px;
     margin: 0;
+    min-width: auto;
 
     &:hover {
       background: $ocean;
